// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`13.h.1 Cinema > 13.h.1.2 Cinema.vue works correct 1`] = `
<div
  class="cinema"
>
  <h2>
    Режиссеры
  </h2>
  <div
    class="cinema__elements"
  >
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
  </div>
  <h2>
    Фильмы
  </h2>
  <div
    class="cinema__elements"
  >
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
    <!--Начало-->
    <!--Конец-->
    
    
  </div>
</div>
`;

exports[`13.h.1 Cinema > 13.h.1.3 CardBlock.vue works correct 1`] = `
<div
  data-v-app=""
>
  
  <!--������-->
  <!--�����-->
  
</div>
`;

exports[`13.h.1 Cinema > 13.h.1.4 DirectorCard.vue works correct 1`] = `
<div
  data-v-app=""
>
  
  <!--Начало-->
  <!--Конец-->
  
</div>
`;
